--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -1,9 +1,45 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="fr">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+<!--    <title>Connexion</title>-->
+<!--    <link rel="stylesheet" href="/assets/css/style.css">-->
+<!--</head>-->
+<!--<body>-->
+
+<!--<div id="app">-->
+<!--    &lt;!&ndash; Section pour la connexion &ndash;&gt;-->
+<!--    <section id="login-section">-->
+<!--        <h2>Connexion</h2>-->
+<!--        <form id="login-form">-->
+<!--            <label for="email">Email:</label>-->
+<!--            <input type="email" id="email" name="email" required>-->
+<!--            <label for="password">Mot de passe:</label>-->
+<!--            <input type="password" id="password" name="password" required>-->
+<!--            <button type="submit">Se connecter</button>-->
+<!--        </form>-->
+<!--        <p id="login-error" class="error"></p>-->
+<!--    </section>-->
+
+<!--    &lt;!&ndash; Section pour afficher les informations de l'utilisateur connecté &ndash;&gt;-->
+<!--    <section id="user-section" style="display:none;">-->
+<!--        <h2>Bienvenue <span id="user-name"></span>!</h2>-->
+<!--        <button id="logout-btn">Se déconnecter</button>-->
+<!--    </section>-->
+<!--</div>-->
+
+<!--<script src="/assets/js/app.js"></script>-->
+<!--</body>-->
+<!--</html>-->
+
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connexion</title>
+    <title>Connexion / Inscription</title>
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
@@ -20,6 +56,25 @@
             <button type="submit">Se connecter</button>
         </form>
         <p id="login-error" class="error"></p>
+        <p>Pas encore de compte ? <a href="#" id="go-to-register">S'inscrire ici</a></p>
+    </section>
+
+    <!-- Section pour l'inscription (initialement cachée) -->
+    <section id="register-section" style="display:none;">
+        <h2>Inscription</h2>
+        <form id="register-form">
+            <label for="firstname">Prénom:</label>
+            <input type="text" id="firstname" name="firstname" required>
+            <label for="lastname">Nom:</label>
+            <input type="text" id="lastname" name="lastname" required>
+            <label for="email">Email:</label>
+            <input type="email" id="register-email" name="email" required>
+            <label for="password">Mot de passe:</label>
+            <input type="password" id="register-password" name="password" required>
+            <button type="submit">S'inscrire</button>
+        </form>
+        <p id="register-error" class="error"></p>
+        <p>Déjà un compte ? <a href="#" id="go-to-login">Se connecter ici</a></p>
     </section>
 
     <!-- Section pour afficher les informations de l'utilisateur connecté -->
